tools/tests/ui/fail/l1092.cnf
// Test file for error code: L1092
// Expected error: Underflow Semantic character in control flow -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
